@@ -3,6 +3,7 @@ Kiwix 0.9 rc2
 * FIXED: kiwix-install crashes 
 * FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
 * FIXED: open link in new tab from the right-click contextual menu (ID: 3553735)
+* FIXED: Hide bookmarks sidebar in the "library view" (ID: 3555848)
 * NEW: improvement of the "verbose" mode in kiwix-install and kiwix-index
 * NEW: CTRL+R to load random article (ID: 3549370)
 * NEW: Improved server dialog window
